set ram minimum